# autonomy-executor-lab

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md
.github/workflows/: ci.yml
app/: main.cpp
cmake/: aelConfig.cmake.in
docs/: architecture.md  workload-format.md
examples/: overload.csv
include/ael/: executor.hpp
scripts/: build.ps1  build.sh
src/: executor.cpp
tests/: test_executor.cpp
tests/install_consumer/: CMakeLists.txt  main.cpp
tools/: compare_policies.py
